Fix checkout fan: move anchor left, rotate shapes into visible area

--- a/src/app/(site)/get-started/get-started.css
+++ b/src/app/(site)/get-started/get-started.css
@@ -17,18 +17,18 @@
 
 .checkout-fan {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: -20px;
+  right: 40px;
   pointer-events: none;
   z-index: 0;
 }
 
 .checkout-fan__shape {
   position: absolute;
-  bottom: -40px;
-  right: -40px;
-  width: 180px;
-  transform-origin: 90% 90%;
+  bottom: 0;
+  right: 0;
+  width: 160px;
+  transform-origin: 100% 100%;
 }
 
 @media (max-width: 767px) {
